--- a/api_security_tester.ipynb
+++ b/api_security_tester.ipynb
@@ -47,7 +47,7 @@
     "    parsed_url = urlparse(url)\n",
     "    if parsed_url.scheme != 'https':\n",
     "        return \"Insecure (HTTP)\"\n",
-    "    return \"Secure (HTTPS)\"\n"
+    "    return \"Secure (HTTPS)\""
    ],
    "id": "f00bc32c237bdb0",
    "outputs": [],
@@ -112,7 +112,7 @@
     "    except json.JSONDecodeError:\n",
     "        pass  # Response is not JSON\n",
     "\n",
-    "    return findings or \"No sensitive data detected\"\n"
+    "    return findings or \"No sensitive data detected\""
    ],
    "id": "ba10ba71a5310929",
    "outputs": [],
@@ -149,7 +149,7 @@
     "        sensitive_data = [f\"Error: {str(e)}\"]\n",
     "    results.append((\"Sensitive Data Check\", sensitive_data))\n",
     "\n",
-    "    return results\n"
+    "    return results"
    ],
    "id": "a893530c7579cade",
    "outputs": [],
@@ -183,22 +183,22 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-21T12:41:15.305542Z",
-     "start_time": "2024-11-21T12:41:13.270362Z"
+     "end_time": "2024-11-21T13:22:39.008921Z",
+     "start_time": "2024-11-21T13:22:35.951391Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# Example API URL\n",
-    "url = \"http://example.com/api/test\"\n",
-    "headers = {\n",
-    "    \"Authorization\": \"Bearer example_token\"\n",
-    "}\n",
+    "# Example: Testing JSONPlaceholder API\n",
+    "url = \"http://jsonplaceholder.typicode.com/posts\"  # Public API endpoint\n",
     "\n",
-    "# Run tests\n",
+    "# No headers required for this public API\n",
+    "headers = {}\n",
+    "\n",
+    "# Run the security tests\n",
     "results = run_security_tests(url, headers)\n",
     "\n",
-    "# Display report\n",
+    "# Display the test report\n",
     "display_report(results)\n"
    ],
    "id": "6cdad582619e7c64",
@@ -211,90 +211,119 @@
       "|         Test         |           Result           |\n",
       "+----------------------+----------------------------+\n",
       "|     HTTPS Check      |      Insecure (HTTP)       |\n",
-      "| Authentication Check |  Accessible (Status: 404)  |\n",
+      "| Authentication Check |  Accessible (Status: 200)  |\n",
       "| Sensitive Data Check | No sensitive data detected |\n",
       "+----------------------+----------------------------+\n"
      ]
     }
    ],
-   "execution_count": 22
+   "execution_count": 26
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-21T12:41:15.342398Z",
-     "start_time": "2024-11-21T12:41:15.330790Z"
+     "end_time": "2024-11-21T13:28:28.140867Z",
+     "start_time": "2024-11-21T13:28:25.783932Z"
     }
    },
    "cell_type": "code",
    "source": [
+    "import sys\n",
+    "import json\n",
     "import argparse\n",
     "\n",
-    "if __name__ == \"__main__\":\n",
-    "    parser = argparse.ArgumentParser(description=\"Mobile App API Security Tester\")\n",
-    "    parser.add_argument(\"url\", help=\"API endpoint URL\")\n",
-    "    parser.add_argument(\"--headers\", help=\"Headers as JSON string\", default=\"{}\")\n",
-    "    args = parser.parse_args()\n",
+    "# Simulate command-line arguments\n",
+    "sys.argv = [\"script_name\", \"http://jsonplaceholder.typicode.com/posts\", \"--headers\", '{\"Authorization\": \"Bearer example_token\"}']\n",
     "\n",
-    "    url = args.url\n",
-    "    headers = json.loads(args.headers)\n",
+    "# Argument parsing\n",
+    "parser = argparse.ArgumentParser(description=\"Mobile App API Security Tester\")\n",
+    "parser.add_argument(\"url\", help=\"API endpoint URL\")\n",
+    "parser.add_argument(\"--headers\", help=\"Headers as JSON string\", default=\"{}\")\n",
+    "args = parser.parse_args()\n",
     "\n",
-    "    results = run_security_tests(url, headers)\n",
-    "    display_report(results)\n"
+    "# Process arguments\n",
+    "url = args.url\n",
+    "headers = json.loads(args.headers)\n",
+    "\n",
+    "# Run tests\n",
+    "results = run_security_tests(url, headers)\n",
+    "display_report(results)\n"
    ],
    "id": "57faf75a66f50606",
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "usage: ipykernel_launcher.py [-h] [--headers HEADERS] url\n",
-      "ipykernel_launcher.py: error: unrecognized arguments: -f\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "2",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001B[1;31mSystemExit\u001B[0m\u001B[1;31m:\u001B[0m 2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Projects\\Master\\APISecurityTester\\.venv\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:3585: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+      "+----------------------+----------------------------+\n",
+      "|         Test         |           Result           |\n",
+      "+----------------------+----------------------------+\n",
+      "|     HTTPS Check      |      Insecure (HTTP)       |\n",
+      "| Authentication Check |  Accessible (Status: 200)  |\n",
+      "| Sensitive Data Check | No sensitive data detected |\n",
+      "+----------------------+----------------------------+\n"
      ]
     }
    ],
-   "execution_count": 23
+   "execution_count": 30
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-21T13:28:31.500571Z",
+     "start_time": "2024-11-21T13:28:31.478760Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "{\n",
     "    \"sensitive_keywords\": [\"key\", \"token\", \"password\", \"ssn\", \"credit\", \"card\"]\n",
-    "}\n"
+    "}"
    ],
-   "id": "bf01a7863c8129f9"
+   "id": "bf01a7863c8129f9",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'sensitive_keywords': ['key', 'token', 'password', 'ssn', 'credit', 'card']}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 31
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-21T13:28:34.374281Z",
+     "start_time": "2024-11-21T13:28:34.190394Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "with open('config.json') as f:\n",
     "    config = json.load(f)\n",
-    "sensitive_keywords = config[\"sensitive_keywords\"]\n"
+    "sensitive_keywords = config[\"sensitive_keywords\"]"
    ],
-   "id": "b84fd47366ae434a"
+   "id": "b84fd47366ae434a",
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'config.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[32], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28;43mopen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mconfig.json\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m \u001B[38;5;28;01mas\u001B[39;00m f:\n\u001B[0;32m      2\u001B[0m     config \u001B[38;5;241m=\u001B[39m json\u001B[38;5;241m.\u001B[39mload(f)\n\u001B[0;32m      3\u001B[0m sensitive_keywords \u001B[38;5;241m=\u001B[39m config[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124msensitive_keywords\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n",
+      "File \u001B[1;32mD:\\Projects\\Master\\APISecurityTester\\.venv\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001B[0m, in \u001B[0;36m_modified_open\u001B[1;34m(file, *args, **kwargs)\u001B[0m\n\u001B[0;32m    317\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m file \u001B[38;5;129;01min\u001B[39;00m {\u001B[38;5;241m0\u001B[39m, \u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m2\u001B[39m}:\n\u001B[0;32m    318\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[0;32m    319\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mIPython won\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mt let you open fd=\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mfile\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m by default \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    320\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    321\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124myou can use builtins\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m open.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    322\u001B[0m     )\n\u001B[1;32m--> 324\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mio_open\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfile\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
+      "\u001B[1;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: 'config.json'"
+     ]
+    }
+   ],
+   "execution_count": 32
   }
  ],
  "metadata": {
