--- a/api_security_tester.ipynb
+++ b/api_security_tester.ipynb
@@ -18,8 +18,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-11-21T12:41:13.139793Z",
-     "start_time": "2024-11-21T12:41:13.136139Z"
+     "end_time": "2024-12-01T11:12:41.248406Z",
+     "start_time": "2024-12-01T11:12:41.197409Z"
     }
    },
    "source": [
@@ -29,13 +29,13 @@
     "from urllib.parse import urlparse"
    ],
    "outputs": [],
-   "execution_count": 16
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-21T12:41:13.176843Z",
-     "start_time": "2024-11-21T12:41:13.172539Z"
+     "end_time": "2024-12-01T11:12:41.274309Z",
+     "start_time": "2024-12-01T11:12:41.268541Z"
     }
    },
    "cell_type": "code",
@@ -51,13 +51,13 @@
    ],
    "id": "f00bc32c237bdb0",
    "outputs": [],
-   "execution_count": 17
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-21T12:41:13.206825Z",
-     "start_time": "2024-11-21T12:41:13.199564Z"
+     "end_time": "2024-12-01T11:12:41.307623Z",
+     "start_time": "2024-12-01T11:12:41.298663Z"
     }
    },
    "cell_type": "code",
@@ -79,13 +79,13 @@
    ],
    "id": "b5815a0389ee4f27",
    "outputs": [],
-   "execution_count": 18
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-21T12:41:13.222536Z",
-     "start_time": "2024-11-21T12:41:13.215317Z"
+     "end_time": "2024-12-01T11:12:41.338322Z",
+     "start_time": "2024-12-01T11:12:41.329336Z"
     }
    },
    "cell_type": "code",
@@ -116,13 +116,13 @@
    ],
    "id": "ba10ba71a5310929",
    "outputs": [],
-   "execution_count": 19
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-21T12:41:13.242727Z",
-     "start_time": "2024-11-21T12:41:13.235397Z"
+     "end_time": "2024-12-01T11:12:41.373621Z",
+     "start_time": "2024-12-01T11:12:41.365089Z"
     }
    },
    "cell_type": "code",
@@ -153,13 +153,13 @@
    ],
    "id": "a893530c7579cade",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 7
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-21T12:41:13.258232Z",
-     "start_time": "2024-11-21T12:41:13.253043Z"
+     "end_time": "2024-12-01T11:12:41.391056Z",
+     "start_time": "2024-12-01T11:12:41.384514Z"
     }
    },
    "cell_type": "code",
@@ -178,13 +178,13 @@
    ],
    "id": "a1aaf2a8d5eaf01c",
    "outputs": [],
-   "execution_count": 21
+   "execution_count": 8
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-21T13:22:39.008921Z",
-     "start_time": "2024-11-21T13:22:35.951391Z"
+     "end_time": "2024-12-01T11:12:45.467723Z",
+     "start_time": "2024-12-01T11:12:41.414853Z"
     }
    },
    "cell_type": "code",
@@ -207,23 +207,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------------------+----------------------------+\n",
-      "|         Test         |           Result           |\n",
-      "+----------------------+----------------------------+\n",
-      "|     HTTPS Check      |      Insecure (HTTP)       |\n",
-      "| Authentication Check |  Accessible (Status: 200)  |\n",
-      "| Sensitive Data Check | No sensitive data detected |\n",
-      "+----------------------+----------------------------+\n"
+      "+----------------------+-----------------------------------+\n",
+      "|         Test         |               Result              |\n",
+      "+----------------------+-----------------------------------+\n",
+      "|     HTTPS Check      |          Insecure (HTTP)          |\n",
+      "| Authentication Check | Error: Response ended prematurely |\n",
+      "| Sensitive Data Check |     No sensitive data detected    |\n",
+      "+----------------------+-----------------------------------+\n"
      ]
     }
    ],
-   "execution_count": 26
+   "execution_count": 9
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-21T13:28:28.140867Z",
-     "start_time": "2024-11-21T13:28:25.783932Z"
+     "end_time": "2024-12-01T11:12:48.267668Z",
+     "start_time": "2024-12-01T11:12:45.501166Z"
     }
    },
    "cell_type": "code",
@@ -265,13 +265,13 @@
      ]
     }
    ],
-   "execution_count": 30
+   "execution_count": 10
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-21T13:28:31.500571Z",
-     "start_time": "2024-11-21T13:28:31.478760Z"
+     "end_time": "2024-12-01T11:12:48.308517Z",
+     "start_time": "2024-12-01T11:12:48.290204Z"
     }
    },
    "cell_type": "code",
@@ -288,18 +288,18 @@
        "{'sensitive_keywords': ['key', 'token', 'password', 'ssn', 'credit', 'card']}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 31
+   "execution_count": 11
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-11-21T13:28:34.374281Z",
-     "start_time": "2024-11-21T13:28:34.190394Z"
+     "end_time": "2024-12-01T11:12:48.719969Z",
+     "start_time": "2024-12-01T11:12:48.438953Z"
     }
    },
    "cell_type": "code",
@@ -317,13 +317,13 @@
      "traceback": [
       "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
       "\u001B[1;31mFileNotFoundError\u001B[0m                         Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[32], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28;43mopen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mconfig.json\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m \u001B[38;5;28;01mas\u001B[39;00m f:\n\u001B[0;32m      2\u001B[0m     config \u001B[38;5;241m=\u001B[39m json\u001B[38;5;241m.\u001B[39mload(f)\n\u001B[0;32m      3\u001B[0m sensitive_keywords \u001B[38;5;241m=\u001B[39m config[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124msensitive_keywords\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n",
-      "File \u001B[1;32mD:\\Projects\\Master\\APISecurityTester\\.venv\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001B[0m, in \u001B[0;36m_modified_open\u001B[1;34m(file, *args, **kwargs)\u001B[0m\n\u001B[0;32m    317\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m file \u001B[38;5;129;01min\u001B[39;00m {\u001B[38;5;241m0\u001B[39m, \u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m2\u001B[39m}:\n\u001B[0;32m    318\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[0;32m    319\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mIPython won\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mt let you open fd=\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mfile\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m by default \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    320\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    321\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124myou can use builtins\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m open.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    322\u001B[0m     )\n\u001B[1;32m--> 324\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mio_open\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfile\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
+      "Cell \u001B[1;32mIn[12], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m \u001B[38;5;28;01mwith\u001B[39;00m \u001B[38;5;28;43mopen\u001B[39;49m\u001B[43m(\u001B[49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[38;5;124;43mconfig.json\u001B[39;49m\u001B[38;5;124;43m'\u001B[39;49m\u001B[43m)\u001B[49m \u001B[38;5;28;01mas\u001B[39;00m f:\n\u001B[0;32m      2\u001B[0m     config \u001B[38;5;241m=\u001B[39m json\u001B[38;5;241m.\u001B[39mload(f)\n\u001B[0;32m      3\u001B[0m sensitive_keywords \u001B[38;5;241m=\u001B[39m config[\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124msensitive_keywords\u001B[39m\u001B[38;5;124m\"\u001B[39m]\n",
+      "File \u001B[1;32mD:\\Projects\\Master\\APISecurityTester\\.venv1\\Lib\\site-packages\\IPython\\core\\interactiveshell.py:324\u001B[0m, in \u001B[0;36m_modified_open\u001B[1;34m(file, *args, **kwargs)\u001B[0m\n\u001B[0;32m    317\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m file \u001B[38;5;129;01min\u001B[39;00m {\u001B[38;5;241m0\u001B[39m, \u001B[38;5;241m1\u001B[39m, \u001B[38;5;241m2\u001B[39m}:\n\u001B[0;32m    318\u001B[0m     \u001B[38;5;28;01mraise\u001B[39;00m \u001B[38;5;167;01mValueError\u001B[39;00m(\n\u001B[0;32m    319\u001B[0m         \u001B[38;5;124mf\u001B[39m\u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mIPython won\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mt let you open fd=\u001B[39m\u001B[38;5;132;01m{\u001B[39;00mfile\u001B[38;5;132;01m}\u001B[39;00m\u001B[38;5;124m by default \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    320\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    321\u001B[0m         \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124myou can use builtins\u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m open.\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    322\u001B[0m     )\n\u001B[1;32m--> 324\u001B[0m \u001B[38;5;28;01mreturn\u001B[39;00m \u001B[43mio_open\u001B[49m\u001B[43m(\u001B[49m\u001B[43mfile\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43margs\u001B[49m\u001B[43m,\u001B[49m\u001B[43m \u001B[49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[38;5;241;43m*\u001B[39;49m\u001B[43mkwargs\u001B[49m\u001B[43m)\u001B[49m\n",
       "\u001B[1;31mFileNotFoundError\u001B[0m: [Errno 2] No such file or directory: 'config.json'"
      ]
     }
    ],
-   "execution_count": 32
+   "execution_count": 12
   }
  ],
  "metadata": {
