--- a/main.ipynb
+++ b/main.ipynb
@@ -18,10 +18,13 @@
    "id": "79764e0fbd483c63"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-12-01T11:09:06.500182Z",
+     "start_time": "2024-12-01T11:09:06.349020Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "import requests\n",
     "import re\n",
@@ -30,13 +33,18 @@
     "from colorama import init, Fore, Style\n",
     "import logging"
    ],
-   "id": "abb1f74bc846f324"
+   "id": "abb1f74bc846f324",
+   "outputs": [],
+   "execution_count": 1
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-11-26T06:10:49.366642Z",
+     "start_time": "2024-11-26T06:10:49.031340Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "\n",
     "# Initialize colorama for colored output\n",
@@ -157,7 +165,29 @@
     "if __name__ == '__main__':\n",
     "    main()"
    ],
-   "id": "b11fb31862c9dd1b"
+   "id": "b11fb31862c9dd1b",
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'init' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m \u001B[38;5;66;03m# Initialize colorama for colored output\u001B[39;00m\n\u001B[1;32m----> 2\u001B[0m \u001B[43minit\u001B[49m(autoreset\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[0;32m      4\u001B[0m \u001B[38;5;28;01mclass\u001B[39;00m \u001B[38;5;21;01mMobileAPISecurityTester\u001B[39;00m:\n\u001B[0;32m      5\u001B[0m     \u001B[38;5;28;01mdef\u001B[39;00m \u001B[38;5;21m__init__\u001B[39m(\u001B[38;5;28mself\u001B[39m, base_url, headers\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m, auth_token\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mNone\u001B[39;00m):\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'init' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "e637ec7711646aa7"
   }
  ],
  "metadata": {
