--- a/APISecurityModelTrainer.ipynb
+++ b/APISecurityModelTrainer.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-01T16:54:29.906543Z",
-     "start_time": "2024-12-01T16:54:24.313200Z"
+     "end_time": "2024-12-01T16:58:20.651919Z",
+     "start_time": "2024-12-01T16:57:41.093981Z"
     }
    },
    "source": [
@@ -79,11 +79,20 @@
     "        try:\n",
     "            json_data = response.json()\n",
     "            features['is_json'] = True\n",
+    "\n",
+    "            # Handle both dict and list responses\n",
+    "            if isinstance(json_data, dict):\n",
+    "                values_to_check = json_data.values()\n",
+    "            elif isinstance(json_data, list):\n",
+    "                values_to_check = json_data\n",
+    "            else:\n",
+    "                values_to_check = [json_data]\n",
+    "\n",
     "            features['num_sensitive_keywords'] = sum(\n",
     "                sum(1 for sensitive in sensitive_keywords if sensitive in str(value).lower())\n",
-    "                for value in json_data.values()\n",
+    "                for value in values_to_check\n",
     "            )\n",
-    "        except (ValueError, TypeError):\n",
+    "        except (ValueError, TypeError, AttributeError):\n",
     "            pass\n",
     "\n",
     "        return features\n",
@@ -102,7 +111,6 @@
     "                variants = [\n",
     "                    {'url': url, 'headers': {}},\n",
     "                    {'url': url, 'headers': {'Authorization': 'Bearer test_token'}},\n",
-    "                    # Add more header variations if needed\n",
     "                ]\n",
     "\n",
     "                for variant in variants:\n",
@@ -131,6 +139,16 @@
     "        \"\"\"\n",
     "        Prepare data for machine learning models\n",
     "        \"\"\"\n",
+    "        # Ensure numerical columns\n",
+    "        numerical_columns = [\n",
+    "            'status_code', 'content_length', 'num_sensitive_headers',\n",
+    "            'num_sensitive_keywords', 'redirects', 'header_count'\n",
+    "        ]\n",
+    "\n",
+    "        # Replace any non-numeric values\n",
+    "        for col in numerical_columns:\n",
+    "            df[col] = pd.to_numeric(df[col], errors='coerce').fillna(0)\n",
+    "\n",
     "        # Separate features and labels\n",
     "        X = df.drop('is_secure_endpoint', axis=1)\n",
     "        y = df['is_secure_endpoint']\n",
@@ -259,24 +277,8 @@
     "if __name__ == \"__main__\":\n",
     "    main()"
    ],
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'values'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[3], line 247\u001B[0m\n\u001B[0;32m    244\u001B[0m     model_trainer\u001B[38;5;241m.\u001B[39mtrain_comprehensive_model(additional_urls)\n\u001B[0;32m    246\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m \u001B[38;5;18m__name__\u001B[39m \u001B[38;5;241m==\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m__main__\u001B[39m\u001B[38;5;124m\"\u001B[39m:\n\u001B[1;32m--> 247\u001B[0m     \u001B[43mmain\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[1;32mIn[3], line 244\u001B[0m, in \u001B[0;36mmain\u001B[1;34m()\u001B[0m\n\u001B[0;32m    238\u001B[0m \u001B[38;5;66;03m# Optional: Provide additional training URLs\u001B[39;00m\n\u001B[0;32m    239\u001B[0m additional_urls \u001B[38;5;241m=\u001B[39m [\n\u001B[0;32m    240\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mhttps://reqres.in/api/users\u001B[39m\u001B[38;5;124m\"\u001B[39m,\n\u001B[0;32m    241\u001B[0m     \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mhttps://httpbin.org/get\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[0;32m    242\u001B[0m ]\n\u001B[1;32m--> 244\u001B[0m \u001B[43mmodel_trainer\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mtrain_comprehensive_model\u001B[49m\u001B[43m(\u001B[49m\u001B[43madditional_urls\u001B[49m\u001B[43m)\u001B[49m\n",
-      "Cell \u001B[1;32mIn[3], line 213\u001B[0m, in \u001B[0;36mAPISecurityModelTrainer.train_comprehensive_model\u001B[1;34m(self, additional_urls)\u001B[0m\n\u001B[0;32m    209\u001B[0m \u001B[38;5;250m\u001B[39m\u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m    210\u001B[0m \u001B[38;5;124;03mComprehensive model training pipeline\u001B[39;00m\n\u001B[0;32m    211\u001B[0m \u001B[38;5;124;03m\"\"\"\u001B[39;00m\n\u001B[0;32m    212\u001B[0m \u001B[38;5;66;03m# Collect training data\u001B[39;00m\n\u001B[1;32m--> 213\u001B[0m base_df \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcollect_training_data\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    215\u001B[0m \u001B[38;5;66;03m# Add additional URLs if provided\u001B[39;00m\n\u001B[0;32m    216\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m additional_urls:\n",
-      "Cell \u001B[1;32mIn[3], line 101\u001B[0m, in \u001B[0;36mAPISecurityModelTrainer.collect_training_data\u001B[1;34m(self, urls)\u001B[0m\n\u001B[0;32m     95\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m variant \u001B[38;5;129;01min\u001B[39;00m variants:\n\u001B[0;32m     96\u001B[0m     response \u001B[38;5;241m=\u001B[39m requests\u001B[38;5;241m.\u001B[39mget(\n\u001B[0;32m     97\u001B[0m         variant[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124murl\u001B[39m\u001B[38;5;124m'\u001B[39m],\n\u001B[0;32m     98\u001B[0m         headers\u001B[38;5;241m=\u001B[39mvariant[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mheaders\u001B[39m\u001B[38;5;124m'\u001B[39m],\n\u001B[0;32m     99\u001B[0m         timeout\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m5\u001B[39m\n\u001B[0;32m    100\u001B[0m     )\n\u001B[1;32m--> 101\u001B[0m     features \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;43mself\u001B[39;49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mextract_features\u001B[49m\u001B[43m(\u001B[49m\u001B[43mresponse\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m    103\u001B[0m     \u001B[38;5;66;03m# Label based on features (simplified example)\u001B[39;00m\n\u001B[0;32m    104\u001B[0m     features[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mis_secure_endpoint\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m=\u001B[39m (\n\u001B[0;32m    105\u001B[0m         features[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mis_secure\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;129;01mand\u001B[39;00m\n\u001B[0;32m    106\u001B[0m         features[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mstatus_code\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m<\u001B[39m \u001B[38;5;241m400\u001B[39m \u001B[38;5;129;01mand\u001B[39;00m\n\u001B[0;32m    107\u001B[0m         features[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mnum_sensitive_keywords\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m==\u001B[39m \u001B[38;5;241m0\u001B[39m\n\u001B[0;32m    108\u001B[0m     )\n",
-      "Cell \u001B[1;32mIn[3], line 71\u001B[0m, in \u001B[0;36mAPISecurityModelTrainer.extract_features\u001B[1;34m(self, response)\u001B[0m\n\u001B[0;32m     67\u001B[0m     json_data \u001B[38;5;241m=\u001B[39m response\u001B[38;5;241m.\u001B[39mjson()\n\u001B[0;32m     68\u001B[0m     features[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mis_json\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m=\u001B[39m \u001B[38;5;28;01mTrue\u001B[39;00m\n\u001B[0;32m     69\u001B[0m     features[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mnum_sensitive_keywords\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m=\u001B[39m \u001B[38;5;28msum\u001B[39m(\n\u001B[0;32m     70\u001B[0m         \u001B[38;5;28msum\u001B[39m(\u001B[38;5;241m1\u001B[39m \u001B[38;5;28;01mfor\u001B[39;00m sensitive \u001B[38;5;129;01min\u001B[39;00m sensitive_keywords \u001B[38;5;28;01mif\u001B[39;00m sensitive \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mstr\u001B[39m(value)\u001B[38;5;241m.\u001B[39mlower())\n\u001B[1;32m---> 71\u001B[0m         \u001B[38;5;28;01mfor\u001B[39;00m value \u001B[38;5;129;01min\u001B[39;00m \u001B[43mjson_data\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mvalues\u001B[49m()\n\u001B[0;32m     72\u001B[0m     )\n\u001B[0;32m     73\u001B[0m \u001B[38;5;28;01mexcept\u001B[39;00m (\u001B[38;5;167;01mValueError\u001B[39;00m, \u001B[38;5;167;01mTypeError\u001B[39;00m):\n\u001B[0;32m     74\u001B[0m     \u001B[38;5;28;01mpass\u001B[39;00m\n",
-      "\u001B[1;31mAttributeError\u001B[0m: 'list' object has no attribute 'values'"
-     ]
-    }
-   ],
-   "execution_count": 3
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "metadata": {
