--- a/api_security_tester.ipynb
+++ b/api_security_tester.ipynb
@@ -190,7 +190,7 @@
    "cell_type": "code",
    "source": [
     "# Example: Testing JSONPlaceholder API\n",
-    "url = \"http://jsonplaceholder.typicode.com/posts\"  # Public API endpoint\n",
+    "url = \"http://jsonplaceholder.typicode.com/posts\"\n",
     "\n",
     "# No headers required for this public API\n",
     "headers = {}\n",
