--- a/v2/MobileAppSecurityFramework.ipynb
+++ b/v2/MobileAppSecurityFramework.ipynb
@@ -1010,10 +1010,8 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
+     "end_time": "2024-12-15T13:47:43.468216Z",
      "start_time": "2024-12-15T13:47:28.688331Z"
     }
    },
@@ -1037,8 +1035,94 @@
     "print(link_security_report)"
    ],
    "id": "2e76db4ba9e3f05f",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Link Security Assessment Report\n",
+      "========================================\n",
+      "\n",
+      "URL: https://www.example.com\n",
+      "Security Score: 35.00/100\n",
+      "Overall Status: RISKY\n",
+      "Detected Risks:\n",
+      "- DNS resolution failed: DNS resolution error: The DNS response does not contain an answer to the question: www.example.com. IN MX\n",
+      "\n",
+      "SSL Certificate Details:\n",
+      "- Issuer: {'countryName': 'US', 'organizationName': 'DigiCert Inc', 'commonName': 'DigiCert Global G2 TLS RSA SHA256 2020 CA1'}\n",
+      "- Expiration: 2025-03-01 23:59:59\n",
+      "- Days to Expiry: 76\n",
+      "\n",
+      "----------------------------------------\n",
+      "\n",
+      "URL: https://github.com\n",
+      "Security Score: 50.00/100\n",
+      "Overall Status: RISKY\n",
+      "\n",
+      "SSL Certificate Details:\n",
+      "- Issuer: {'countryName': 'GB', 'stateOrProvinceName': 'Greater Manchester', 'localityName': 'Salford', 'organizationName': 'Sectigo Limited', 'commonName': 'Sectigo ECC Domain Validation Secure Server CA'}\n",
+      "- Expiration: 2025-03-07 23:59:59\n",
+      "- Days to Expiry: 82\n",
+      "\n",
+      "DNS Details:\n",
+      "- A Records: ['20.205.243.166']\n",
+      "- Total Records: 6\n",
+      "\n",
+      "----------------------------------------\n",
+      "\n",
+      "URL: http://suspicious-site.com\n",
+      "Security Score: 0.00/100\n",
+      "Overall Status: RISKY\n",
+      "Detected Risks:\n",
+      "- DNS resolution failed: DNS resolution error: The DNS query name does not exist: suspicious-site.com.\n",
+      "- SSL check failed: SSL certificate check failed: [Errno 11001] getaddrinfo failed\n",
+      "- Whois lookup failed: WHOIS lookup failed: No match for \"SUSPICIOUS-SITE.COM\".\r\n",
+      ">>> Last update of whois database: 2024-12-15T13:47:34Z <<<\r\n",
+      "\r\n",
+      "NOTICE: The expiration date displayed in this record is the date the\r\n",
+      "registrar's sponsorship of the domain name registration in the registry is\r\n",
+      "currently set to expire. This date does not necessarily reflect the expiration\r\n",
+      "date of the domain name registrant's agreement with the sponsoring\r\n",
+      "registrar.  Users may consult the sponsoring registrar's Whois database to\r\n",
+      "view the registrar's reported date of expiration for this registration.\r\n",
+      "\r\n",
+      "TERMS OF USE: You are not authorized to access or query our Whois\r\n",
+      "database through the use of electronic processes that are high-volume and\r\n",
+      "automated except as reasonably necessary to register domain names or\r\n",
+      "modify existing registrations; the Data in VeriSign Global Registry\r\n",
+      "Services' (\"VeriSign\") Whois database is provided by VeriSign for\r\n",
+      "information purposes only, and to assist persons in obtaining information\r\n",
+      "about or related to a domain name registration record. VeriSign does not\r\n",
+      "guarantee its accuracy. By submitting a Whois query, you agree to abide\r\n",
+      "by the following terms of use: You agree that you may use this Data only\r\n",
+      "for lawful purposes and that under no circumstances will you use this Data\r\n",
+      "to: (1) allow, enable, or otherwise support the transmission of mass\r\n",
+      "unsolicited, commercial advertising or solicitations via e-mail, telephone,\r\n",
+      "or facsimile; or (2) enable high volume, automated, electronic processes\r\n",
+      "that apply to VeriSign (or its computer systems). The compilation,\r\n",
+      "repackaging, dissemination or other use of this Data is expressly\r\n",
+      "prohibited without the prior written consent of VeriSign. You agree not to\r\n",
+      "use electronic processes that are automated and high-volume to access or\r\n",
+      "query the Whois database except as reasonably necessary to register\r\n",
+      "domain names or modify existing registrations. VeriSign reserves the right\r\n",
+      "to restrict your access to the Whois database in its sole discretion to ensure\r\n",
+      "operational stability.  VeriSign may restrict or terminate your access to the\r\n",
+      "Whois database for failure to abide by these terms of use. VeriSign\r\n",
+      "reserves the right to modify these terms at any time.\r\n",
+      "\r\n",
+      "The Registry database contains ONLY .COM, .NET, .EDU domains and\r\n",
+      "Registrars.\r\n",
+      "\n",
+      "- Suspicious HTTP status: 503\n",
+      "\n",
+      "----------------------------------------\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "execution_count": 18
   }
  ],
  "metadata": {
